--- a/src/main/resources/templates/normal/userDashboard.html
+++ b/src/main/resources/templates/normal/userDashboard.html
@@ -15,6 +15,13 @@
         <div class="row justify-content-center">
           <div class="col-md-8">
             <div id="card" class="card">
+				<div class="contactiner col-md-8 offset-md-2 text-center">
+					<div th:if="${session.message}" th:classappend="${session.message.type}" class="alert" role="alert">
+						<th:block th:text="${session.message.content}"></th:block>
+					</div>
+					<!--<th:block th:text="${#session.removeAttribute('message')}"></th:block>-->
+					<th:block th:text="${@sessionHelper.removeMessageFromSession()}"></th:block>
+				</div>
               <div class="card-header text-center">
                 <img
                   src=""
