Update Profile section Completed

--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -74,7 +74,7 @@
             <i class="fa-solid fa-gear"></i> Settings
         </a>
         <div class="dropdown-menu" aria-labelledby="settingsDropdown">
-            <a class="dropdown-item" th:href="@{/user/editProfile}"> <i class="fa-solid fa-user-edit"></i> Edit Profile</a>
+            <a class="dropdown-item" th:href="@{/user/updateProfile}"> <i class="fa-solid fa-user-edit"></i> Edit Profile</a>
             <a class="dropdown-item" th:href="@{/user/changePassword}"> <i class="fa-solid fa-lock"></i> Change Password</a>
         </div>
     </div>
