--- a/src/main/resources/templates/normal/showContact.html
+++ b/src/main/resources/templates/normal/showContact.html
@@ -13,7 +13,7 @@
 		<div class="card mr-4 ml-4">
 			<div class="cardBody">
 				<div class="text-center">
-					<h1><i class="fa-regular fa-address-book"></i></i></h1>
+					<h1><i class="fa-regular fa-address-book"></i></h1>
 					<h1>Contacts</h1>
 				</div>
 				<div class="container col-md-8 offset-md-2 text-center">
