--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -15,4 +15,11 @@
 #login-form input {
     background-color: rgba(255, 255, 255, 0.2);
     border: 1px solid #ced4da; 
+    color: white;
+}
+
+
+.form-gap {
+    padding-top: 70px;
+    margin-left: 600px;
 }
