--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -10,7 +10,10 @@
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
 		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+		integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 	<link rel="stylesheet" th:href="@{/css/style.css}" />
 	<link rel="stylesheet" th:href="@{/css/login.css}" />
 	<title th:text="${title}">Base Page</title>
@@ -44,7 +47,7 @@
 				<li class="nav-item">
 					<a class="nav-link" th:href="@{/signup}">Sign Up</a>
 				</li>
-				
+
 			</ul>
 		</div>
 	</nav>
