--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -37,7 +37,7 @@
 					<div class="col-sm-12 col-md-6 col-lg-3 my-5">
 						<div class="card border-0">
 							<div class="card-body text-center" id="card-body">
-								<i class="fa-solid fa-location-dot" aria-hidden="true"></i>
+								<i class="fa fa-map-marker fa-5x mb-3" aria-hidden="true"></i>
 								<h4 class="text-uppercase mb-5">office loaction</h4>
 								<address>Suite 02, Level 12, Sahera Tropical Center </address>
 							</div>
