--- a/src/main/resources/templates/normal/changePassword.html
+++ b/src/main/resources/templates/normal/changePassword.html
@@ -17,7 +17,7 @@
             <!-- <h1><i class="fa-solid fa-pen-to-square"></i></i></h1> -->
             <h1>Change Password</h1>
           </div>
-          <div class="contactiner col-md-8 offset-md-2 text-center">
+          <div class="container col-md-8 offset-md-2 text-center">
 					<div th:if="${session.message}" th:classappend="${session.message.type}" class="alert" role="alert">
 						<th:block th:text="${session.message.content}"></th:block>
 					</div>
