--- a/src/main/resources/templates/normal/profile.html
+++ b/src/main/resources/templates/normal/profile.html
@@ -19,6 +19,13 @@
               <i class="fa-solid fa-pen-to-square"></i>
             </button>
           </div>
+          <div class="contactiner col-md-8 offset-md-2 text-center">
+					<div th:if="${session.message}" th:classappend="${session.message.type}" class="alert" role="alert">
+						<th:block th:text="${session.message.content}"></th:block>
+					</div>
+					<!--<th:block th:text="${#session.removeAttribute('message')}"></th:block>-->
+					<th:block th:text="${@sessionHelper.removeMessageFromSession()}"></th:block>
+				</div>
           <div class="container col-md-4 text-center">
             <div class="profile-img text-center mt-1">
               <img
@@ -94,7 +101,7 @@
                   <label>Account Active  :</label>
                 </div>
                 <div class="col-md-6">
-                  <p th:text="${user.activeStatus}">Yes</p>
+                  <p th:text="${user.activeStatus ? 'YES' : 'NO'}">Yes</p>
                 </div>
               </div>
 			  <div class="row">
