--- a/src/main/resources/templates/normal/updateProfile.html
+++ b/src/main/resources/templates/normal/updateProfile.html
@@ -16,6 +16,13 @@
 					<h1><i class="fa-solid fa-pen-to-square"></i></i></h1>
 					<h1>Update Profile</h1>
 				</div>
+				<div class="contactiner col-md-8 offset-md-2 text-center">
+					<div th:if="${session.message}" th:classappend="${session.message.type}" class="alert" role="alert">
+						<th:block th:text="${session.message.content}"></th:block>
+					</div>
+					<!--<th:block th:text="${#session.removeAttribute('message')}"></th:block>-->
+					<th:block th:text="${@sessionHelper.removeMessageFromSession()}"></th:block>
+				</div>
 				<div class="container-fluid mt-1 mr-6 ml-6">
 					<div class="row">
 						<div class="col-md-8 offset-md-2">
